--- a/.github/workflows/Publish-GHCR.yml
+++ b/.github/workflows/Publish-GHCR.yml
@@ -15,6 +15,7 @@ permissions:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository_owner }}/nacypht
+  BUILD_PLATFORMS: linux/amd64
 
 jobs:
   build-and-push:
@@ -54,7 +55,7 @@ jobs:
           context: .
           file: ./docker/Dockerfile
           push: true
-          platforms: linux/amd64,linux/arm64
+          platforms: ${{ env.BUILD_PLATFORMS }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
